# aiopath

./: .gitignore  .python-version  CREDIT.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.py
aiopath/: __init__.py  compat.py  flavours.py  handle.py  metadata.py  path.py  path.py.old~  paths.py  scandir.py  selectors.py  types.py  wrap.py
aiopath/old/: handle.py  path.py  scandir.py  selectors.py
src/aiopath/: __init__.py  compat.py.old~  handle.py  path.py  path.py.old~  types.py  wrap.py
src/aiopath/old/: flavours.py
tests/: __init__.py  test_aiopath.py  test_asyncpath.py  test_examples.py  test_issues.py  test_readme.py
