[tool.poetry]
name = "aiopath"
version = "0.6.10"
description = "ðŸ“ Async pathlib for Python"
license = "LGPL-3.0"
homepage = "https://github.com/alexdelorenzo/aiopath"
authors = ["Alex DeLorenzo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.*, <4"
aiofile = ">=3.5.0, <4"
typing-extensions = {version = ">=3.10.0.0", python = "<3.10"}
anyio = ">=3.2.0, <4"
